--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,12 @@
-# this file is *not* meant to cover or endorse the use of travis, but rather to
-# help confirm pull requests to this project.
-
 language: python
-
 python:
   - "3.5"
-  - "3.6"
+  - "3.6"      # current default Python on Travis CI
   - "3.7"
   - "3.8"
-
-install: pip install tox-travis
-
-script: tox
-
-notifications:
-  email: false
+# command to install dependencies
+install:
+  - pip install -r requirements.txt
+# command to run tests
+script:
+  - pytest
